[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/FadeEffect.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/settings/Settings.gd" type="Script" id=2]
[ext_resource path="res://src/ui/background/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/teams/national-teams/usa.png" type="Texture" id=4]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="FadeEffect" parent="." instance=ExtResource( 1 )]
node_path = NodePath("../VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -250.0
margin_right = 270.0
margin_bottom = 250.0
custom_constants/separation = 8
alignment = 1

[node name="RoundLimit" type="Button" parent="VBoxContainer"]
margin_right = 540.0
margin_bottom = 72.0
text = "ROUNDLIMIT"

[node name="Music" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 540.0
margin_bottom = 152.0
text = "MUSIC_ON"

[node name="Sfx" type="Button" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 540.0
margin_bottom = 232.0
text = "SFX_ON"

[node name="MoreGames" type="Button" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 540.0
margin_bottom = 312.0
text = "MORE_GAMES"

[node name="Language" type="Button" parent="VBoxContainer"]
margin_top = 320.0
margin_right = 540.0
margin_bottom = 392.0
text = "LANGUAGE"
expand_icon = true

[node name="Flag" type="TextureRect" parent="VBoxContainer/Language"]
anchor_left = 0.86
anchor_right = 0.955
anchor_bottom = 1.0
margin_left = 0.26001
margin_right = 187.655
margin_bottom = 178.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="Join" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 685.0
margin_right = 533.0
margin_bottom = 787.0
text = "JOIN"

[node name="Info" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 412.0
margin_right = 659.0
margin_bottom = 507.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "INFO"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 400.0
margin_right = 540.0
margin_bottom = 420.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="GoBack" type="Button" parent="VBoxContainer"]
margin_top = 428.0
margin_right = 540.0
margin_bottom = 500.0
text = "GO_BACK"

[node name="EasterEgg" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 305.431
margin_top = 2.26952
margin_right = 825.431
margin_bottom = 1282.27
rect_scale = Vector2( 0.793488, 0.042611 )

[node name="EasterEggTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="VBoxContainer/RoundLimit" to="." method="_on_RoundLimit_pressed"]
[connection signal="pressed" from="VBoxContainer/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="VBoxContainer/Sfx" to="." method="_on_Sfx_pressed"]
[connection signal="pressed" from="VBoxContainer/MoreGames" to="." method="_on_MoreGames_pressed"]
[connection signal="pressed" from="VBoxContainer/Language" to="." method="_on_Language_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="VBoxContainer/Info" to="." method="_on_Info_pressed"]
[connection signal="pressed" from="VBoxContainer/GoBack" to="." method="_on_GoBack_pressed"]
[connection signal="button_down" from="EasterEgg" to="." method="_on_EasterEgg_button_down"]
[connection signal="button_up" from="EasterEgg" to="." method="_on_EasterEgg_button_up"]
[connection signal="timeout" from="EasterEggTimer" to="." method="_on_EasterEggTimer_timeout"]
